# reference-product

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/chi_app/: __init__.py  main.py
src/chi_app/static/: index.html
src/chi_cli/: __init__.py  main.py
src/chi_runtime/: __init__.py  agent.py  config.py  metrics.py  model.py  models.py  orchestrator.py  providers.py  retry.py  tool.py
src/chi_runtime/agents/: __init__.py  hello.py
tests/: test_api.py  test_cli.py  test_config.py  test_orchestrator_streaming.py  test_providers.py  test_retry_metrics.py  test_runtime.py
