[project]
name = "reference-product"
version = "0.1.0"
description = "Chimeric Intelligence reference product: agent runtime skeleton + local dev harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
chi = "chi_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chi_runtime", "src/chi_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["chi_runtime", "chi_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
packages = ["chi_runtime", "chi_cli"]
ignore_missing_imports = true
